fix: Sort value of z-index

--- a/packages/mobile/src/components/molecules/Footer/style.module.scss
+++ b/packages/mobile/src/components/molecules/Footer/style.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   height: 64px;
-  z-index: 5;
+  z-index: 110;
   display: flex;
   justify-content: space-around;
   align-items: center;
